--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   dartz:
   dartx:
   equatable:
+  floating_search_bar: ^0.3.0
   flutter_bloc:
   flutter_screenutil:
   permission_handler:
